--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Miroslav Bartoš
-description: I'm a runner, a petrolhead, a programmer and a husband. Priority in descending order.
+description: I'm a runner, a petrolhead, a programmer and a husband. Priority in descending order. You can contact me on bartos.store@gmail.com.
 
